# dlvt

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  github_release_draft.md  pyproject.toml  references.bib  requirements.txt  setup.py
.github/workflows/: publish.yml  python-app.yml  tests.yml
dlvt/: __init__.py  analysis.py  fastslow.py  figures.py  model.py  nondimensional.py  recovery.py  sobol.py  stochastic.py
dlvt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: dlvt_exploration.ipynb
paper/: README.md  main.tex
paper/appendices/: A01_positive_invariance.tex  A04_equilibrium_algebra.tex  A05_jacobian_stability.tex  A06_carrying_capacity.tex  A07_regularization_audit.tex  A08_bifurcation_interval.tex  A09_epsilon_extrapolation.tex  A10_global_stability.tex  A11_fast_slow.tex
paper/chapters/: 01_introduction.tex  02_theoretical_foundations.tex  03_mathematical_formulation.tex  04_analysis_results.tex  05_discussion.tex  06_empirical_program.tex
prereg/: PREREGISTRATION.md  README.md
scripts/: audit_refs.py  dlvt_figures.py  dlvt_solver.py  fig10_intervention_comparison.py  fig11_sensitivity_global.py  fig12_stochastic_robustness.py  fig13_sobol_indices.py  fig14_fastslow_basin.py  fig8_bifurcation_hysteresis.py  fig9_robustness.py  generate_figures.py  robustness_grid.py  run_all_figures.py  validate_sota.py  verify.py
tests/: test_analysis.py  test_fastslow.py  test_model.py  test_nondimensional.py  test_sobol.py  test_stochastic.py
