[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dlvt"
version = "1.0.0"
description = "Dynamic Leadership Vitality Theory: A dynamical systems model of executive sustainability"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "William Bendinelli"}
]
keywords = ["dynamical-systems", "leadership", "executive", "burnout", "complexity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "pytest>=7.0",
    "black>=22.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/dlvt"
Documentation = "https://github.com/yourusername/dlvt#readme"
Repository = "https://github.com/yourusername/dlvt"
"Bug Tracker" = "https://github.com/yourusername/dlvt/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dlvt"]
exclude = ["notebooks", "scripts", "tests", "*.tests"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | notebooks
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
