[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlvt"
version = "2.0.0"
description = "Dynamic Leadership Vitality Theory: A dynamical systems model of executive sustainability"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "William Bendinelli", email = "wbendinelli@gmail.com"}
]
keywords = [
    "dynamical-systems", "leadership", "executive", "burnout",
    "complexity", "ode", "bifurcation", "computational-social-science",
    "zombie-leader", "vitality"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Sociology",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "pytest>=7.0",
    "black>=22.0",
    "build>=0.10",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/wbendinelli/dlvt"
Documentation = "https://github.com/wbendinelli/dlvt#readme"
Repository = "https://github.com/wbendinelli/dlvt"
"Bug Tracker" = "https://github.com/wbendinelli/dlvt/issues"
Paper = "https://papers.ssrn.com/sol3/papers.cfm?abstract_id=6455001"
Changelog = "https://github.com/wbendinelli/dlvt/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["dlvt*"]
exclude = ["notebooks*", "scripts*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
